--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  background-color: rgb(145, 185, 184);
+  background-color: rgb(255, 255, 255);
 }
 main {
   flex: 1 0 auto;
@@ -24,13 +24,12 @@ main {
   width: 226px;
   height: 30px;
   transform: rotate(90deg);
-  font-size: 12px;
   color: black;
   background-color: white;
 }
 footer {
-  position: relative;
-  /* inherit; */
+  position: inherit;
+  /* ; relative*/
   left: 0;
   bottom: 0;
   width: 100%;
@@ -47,8 +46,4 @@ footer {
 .footer-copyright {
   text-align: left;
   font-family: monospace;
-}
-
-footer {
-  position: fixed;
 }
