--- a/client/src/components/ProductAdmin/ProductAdmin.css
+++ b/client/src/components/ProductAdmin/ProductAdmin.css
@@ -1,5 +1,15 @@
 td {
   border: 1px solid black;
-
   padding: 5px;
+}
+.divForImg {
+  background-color: antiquewhite;
+  height: 60px;
+  margin: auto auto;
+  width: 90%;
+}
+.imgAdmin {
+  /* object-fit: contain; */
+  height: -webkit-fill-available;
+  max-width: -webkit-fill-available;
 }
