--- a/client/src/components/MessagePopup/MessagePopup.css
+++ b/client/src/components/MessagePopup/MessagePopup.css
@@ -1,4 +1,4 @@
-.popup {
+.MessagePopup {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -9,28 +9,26 @@
   margin: auto;
   background-color: rgba(0, 0, 0, 0.5);
 }
-.popupInner {
+.MessagePopupInner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+
   position: absolute;
   left: 30%;
   right: 30%;
-  top: 30%;
-  bottom: 30%;
+  top: 40%;
+  bottom: 40%;
 
-  height: 200px;
-  width: 300px;
+  height: 84px;
+  width: 214px;
 
   margin: auto;
   border-radius: 20px;
   /* background: white; */
   background-color: aliceblue;
 }
-.closePopup {
+.closeMessagePopup {
   margin: 2%;
-  float: right;
-}
-.popupForm {
-  text-align: center;
-}
-.errorMassageLogin {
-  color: red;
 }
